src/test/deca/context/invalid/declare-void-field.deca
// Description:
//    Déclare un attribut de type void
//
// Resultats:
//    Erreur contextuelle   
//    Ligne 12: The field's type can't be void (rule 2.5)
//
// Historique:
//    cree le 16/01/2023

class A {
    void x;
}
